--- a/index.html
+++ b/index.html
@@ -66,17 +66,48 @@
     </header> <!-- fim cabeçalho -->
 
     <section id="home" class="d-flex"> <!--Inicio Home-->     
-      <div class="container align-self-center"> <!--Inicio Container-->  <div class="row"><!--Inicio row-->    
+      <div class="container align-self-center"> <!--Inicio Container-->  
+        <div class="row"><!--Inicio row-->    
           <div class="col-md-12 capa">
             
-            <h1>Música para todos</h1>
-            <a href="" class="btn btn-custom btn-roxo">
-              Aproveite o Spotify Free
+            <div id="carousel-spotify" class="carousel slider" data-ride="carousel"> <!--carousel-->
+              
+              <div class="carousel-inner"> <!--Inner-->
+               <div class="carousel-item active"> <!--carousel item-->
+                  <h1>Música para todos</h1>
+                  <a href="" class="btn btn-custom btn-roxo">
+                    Aproveite o Spotify Free
+                  </a>
+
+                  <a href="" class="btn btn-custom btn-branco">
+                    Obter Spotify Premium
+                  </a>
+
+               </div>
+
+               <div class="carousel-item">  <!--carousel item-->    
+
+                  <h1>As melhores radios</h1>
+                  <a href="" class="btn btn-custom btn-branco">
+                    <i class="fas fa-music"></i>Ouvir agora
+                  </a>
+
+               </div>
+
+
+              </div> <!--Fim Inner-->
+
+            <!-- Controles -->
+            <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
+              <i class="fas fa-angle-left fa-3x"></i>
             </a>
 
-            <a href="" class="btn btn-custom btn-branco">
-              Obter Spotify Premium
+            <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
+              <i class="fas fa-angle-right fa-3x"></i>
             </a>
+            <!-- Fim Controles -->
+
+            </div> <!--Fim carousel-->
 
           </div>
         </div>   <!--Fim Row-->       
