--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                   <h1>As melhores radios</h1>
                   <a href="" class="btn btn-custom btn-branco">
-                    <i class="fas fa-music"></i>Ouvir agora
+                    <i class="fas fa-music"></i> Ouça agora
                   </a>
 
                </div>
